# dajare-classify-practice

./: .env  .gitignore  README.md  bag_of_words.py  consonant.py  create_data.py  find.ipynb  find.py  load_data.py  match_yomi.py  memo.md  model.py  pyproject.toml  requirements.txt  setting.py  svm.ipynb  train_and_test.py  word.py
