[tool.poetry]
name = "3-4演習（3回生）"
version = "0.1.0"
description = ""
authors = ["ayu0616 <ayumuogawa0616@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.1"
keras = "^3.2.1"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
mecab-python = "^1.0.0"
unidic-lite = "^1.0.8"
romkan = "^0.2.1"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
